[tool.poetry]
name = "wasu"
version = "0.1.0"
description = ""
authors = ["Dreamlone <mik_sar@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
geopandas = "^0.14.0"
contextily = "^1.4.0"
loguru = "^0.7.2"
scikit-learn = "^1.3.2"
chardet = "^5.2.0"
xarray = "^2023.11.0"
scipy = "^1.11.4"
netcdf4 = "^1.6.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
